--- a/TicTacRunner.html
+++ b/TicTacRunner.html
@@ -23,9 +23,13 @@ function start(){
 		[0,0,0,0,0,0,0,0,0]
 		];
 	
+	
+	
+	for(int i = 0, i < 80, i++){
 	var bar = new sjs.Image("Images/mogasp1.png");
 	bar.type = "deco";
-	bar.setSize(64,64);
+	bar.setSize(8,8);
+		}
 
 	//sjs.scrollable(player,background);
 
